Update personal infos

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
           
           <button class="header--cta cta">Contact me</button>
           <div class="header--nav-toggle">
-            <span></span>
           </div>
         </header>
 
@@ -152,6 +151,8 @@
                     <p>72 rue des guillemins boite 52, 4000 Liège, Belgique</p>
                     <a href="mailto:flo.maisse@live.be">flo.maisse@live.be</a>
                     <a href="tel:+32498155785">+32 498 15 57 85</a>
+                    <a href="https://www.linkedin.com/in/florentmaisse/">Linkedin</a>
+                    <a href="https://github.com/Flotchet">Github</h3></a>
                   </div>
                 </div>
               </div>
