--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="keywords" content="global, template, html, sass, jquery">
   <meta name="author" content="Bucky Maler">
   <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
@@ -148,11 +149,11 @@
                 <div class="modal">
                   <div class="modal--information">
                     <h1>Contact infos</h1>
-                    <p>72 rue des guillemins boite 52, 4000 Liège, Belgique</p>
-                    <a href="mailto:flo.maisse@live.be">flo.maisse@live.be</a>
-                    <a href="tel:+32498155785">+32 498 15 57 85</a>
-                    <a href="https://www.linkedin.com/in/florentmaisse/">Linkedin</a>
-                    <a href="https://github.com/Flotchet">Github</h3></a>
+                    <a href="https://www.google.com/search?client=opera&q=rue+des+guillemins+72&sourceid=opera&ie=UTF-8&oe=UTF-8#" class="fa fa-home"> 72 rue des guillemins boite 52 <br> 4000 Liège, Belgique</a>
+                    <a href="mailto:flo.maisse@live.be" class="fa fa-envelope"> flo.maisse@live.be</a>
+                    <a href="tel:+32498155785" class="fa fa-phone"> +32 498 15 57 85</a>
+                    <a href="https://www.linkedin.com/in/florentmaisse/" class="fa fa-linkedin"> Linkedin</a>
+                    <a href="https://github.com/Flotchet" class="fa fa-github"><span class="label"> GitHub</span></a>
                   </div>
                 </div>
               </div>
