update the projects section

--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
                   </li>
 
                   <li class="slider--item slider--item-right">
-                    <a href="https://github.com/Flotchet/automate_my_life">
+                    <a href="https://github.com/Flotchet/bank_app">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-metiew-smith.jpg" alt="automate_my_lifen">
+                        <img src="assets/img/p3.jpeg" alt="bank_app">
                       </div>
-                      <p class="slider--item-title">Automate my life</p>
-                      <p class="slider--item-description">This is a solo project aimed to automate part of my life. (currently in developement)</p>
+                      <p class="slider--item-title">client and employee bank app (in dev)</p>
+                      <p class="slider--item-description">This a solo project that uses incremental programming (in addition to other paradigm) to build a multipart application.</p>
                     </a>
-                    <a href="https://github.com/Flotchet/automate_my_life">
+                    <a href="https://github.com/Flotchet/bank_app">
                       <p>Github</p>
                     </a>
                   </li>
